# sms-spam-predictor

./: Makefile  environment.yml  pyproject.toml
configs/: config.yml
src/data/: loader.py  preprocessor.py
src/utils/: helpers.py  io.py  paths.py
