[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sms-spam-predictor"
version = "0.2.0"
description = "A machine learning project to detect SMS spam messages."
authors = [
    { name="Mahan Afshar", email="Mahan.ghaffarzadeh.afshar@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pathlib",
    "pyyaml",
    "pandas",
    "scikit-learn",
    "nltk"
]

[tool.setuptools.packages.find]
where = ["src"]